# aiohttp_booking

./: .gitignore  Readme.md  docker-compose.yml  pyproject.toml  pytest.ini
mail_worker/: .env.example  Readme.md  docker-compose-rabbit.yml  main.py  pyproject.toml  run.sh
mail_worker/consumer/: consumer.py
mail_worker/handlers/: __init__.py  abc.py  exceptions.py  mail_handler.py
mail_worker/handlers/executors/: __init__.py  abc.py  verify_email_executor.py
mail_worker/messages/: __init__.py  abc.py  verify_email.py
mail_worker/sender/: abstract_sender.py  config.py  smtp.py
mail_worker/templates/: verify_email.html
src/: Dockerfile  main.py  middleware.py  pyproject.toml
src/application/user_session/: user_session.py
src/common/dto/: __init__.py  user.py
src/common/publisher/: __init__.py  aio_pika_publisher.py  publisher.py
src/common/service/: __init__.py  jwt_service.py
src/config/: app_config.py  database_config.py
src/dto/: user.py
src/endpoint/: http_exceptions.py
src/endpoint/response/: __init__.py  pydantic_json_response.py
src/endpoint/rest/: __init__.py  abstract_router.py  auth.py
src/infrastructure/config/: __init__.py  broker.py  database_config.py  redis_config.py
src/infrastructure/database/: database.py  model.py
src/infrastructure/redis/: __init__.py  abstract_redis_object.py  redis.py
src/response/: pydantic_json_response.py
src/service/: hash_service.py  jwt_service.py
src/storage/user/: abstract_user_repository.py  user_repository.py
src/storage/verity_record/: pw_verify_record.py  (+1 more)
src/tests/: conftest.py
(+14 files in other folders)
