[tool.poetry]
name = "mail-service"
version = "0.1.0"
description = "Worker service to consume mail message"
authors = ["sxkxixx <sasha.kornilov.1212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aio-pika = "^9.4.0"
aiosmtplib = "^3.0.1"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
